* src/html/classic/css/gsa-style.css: Fix alignment of icons in the toolbar.
git-svn-id: svn+ssh://scm.wald.intevation.org/openvas/trunk/gsa@24828 423fd1db-d629-0410-8442-d21db03e70f4

--- a/src/html/classic/css/gsa-style.css
+++ b/src/html/classic/css/gsa-style.css
@@ -1398,11 +1398,6 @@ select[multiple] {
   display: inline-block;
 }
 
-.toolbar div.icon, .toolbar div.icon form,
-.table-actions div.icon, .table-actions div.icon form {
-  display: inline;
-}
-
 .toolbar .select2-container--default .select2-selection--single {
   /* remove after we have a common height for all input elements */
   height: 22px;
@@ -1441,6 +1436,10 @@ select[multiple] {
 
 .table-actions .icon {
   margin-right: 3px;
+}
+
+.table-actions div.icon, .table-actions div.icon form {
+  display: inline-block;
 }
 
 .valign-middle {
